2012-09-26 Cristian Romanescu <cristian@romanescu.ro>
	* Added JSON and CSV formats for country data

2012-08-27 Cristian Romanescu <cristian@romanescu.ro>
	* Updated flags to hi-quality version, manually adjusted
	* Added sample script for PHP language

2011-12-27 Cristian Romanescu <cristian@romanescu.ro>
	* Organized with sub-directories for each DB
	* Added language table with ISO 639-1 and ISO 639-2 languages
	* Updated README and ChangeLog

2011-04-02 Cristian Romanescu <cristian@romanescu.ro>
	* Added the README and ChangeLog files

2011-04-01 Cristian Romanescu <cristian@romanescu.ro>
	* Initial import into the GitHub.com repository



 Copyright 2011 Cristian Romanescu
 Copying and distribution of this file, with or without modification, are
 permitted provided the copyright notice and this notice are preserved.